--- a/charts/student-virtual-machines/example-values.yaml
+++ b/charts/student-virtual-machines/example-values.yaml
@@ -1,5 +1,10 @@
 ---
 
+students:
+  - student1
+  - student2
+  - student3
+
 virtualMachines:
   storageSize: 30Gi
   storageClass: example-storage-class
