--- a/charts/bootc-image-pipeline/templates/serviceaccount.yaml
+++ b/charts/bootc-image-pipeline/templates/serviceaccount.yaml
@@ -3,3 +3,8 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: bib-sa
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: configmap-watcher-sa
