--- a/charts/build-flightctl-cli/templates/buildconfig.yaml
+++ b/charts/build-flightctl-cli/templates/buildconfig.yaml
@@ -17,6 +17,6 @@ spec:
   source:
     type: Git
     git:
-      uri: '{{ .Values.gitSrouce.url }}'
+      uri: '{{ .Values.gitSource.url }}'
       ref: {{ ((.Values.gitSource).ref) | default "main" }}
     contextDir: builds/flightctl-cli
