avoid sending null

--- a/bootstrap-testing/student-services/templates/student-namespaces.yaml
+++ b/bootstrap-testing/student-services/templates/student-namespaces.yaml
@@ -21,4 +21,6 @@ spec:
       values: |
         studentNamespaces:
           - student-services
-{{ toYaml .Values.studentNamespaces | nindent 10 }}
+{{- if .Values.studentNamespaces }}
+{{- toYaml .Values.studentNamespaces | nindent 10 }}
+{{- end }}
