--- a/charts/acm-rhem/templates/subscription.yaml
+++ b/charts/acm-rhem/templates/subscription.yaml
@@ -10,5 +10,5 @@ spec:
   channel: release-2.13
   installPlanApproval: Automatic
   name: advanced-cluster-management
-  source: acm-custom-registry
+  source: redhat-operators
   sourceNamespace: openshift-marketplace
