--- a/charts/bootc-image-pipeline/templates/pipeline.yaml
+++ b/charts/bootc-image-pipeline/templates/pipeline.yaml
@@ -75,7 +75,7 @@ spec:
                   volumes:
                   - name: pull-secret
                     mounts:
-                    - destinationPath: /pull-secret
+                    - destinationPath: .pull-secret
                     source:
                       type: Secret
                       secret:
