--- a/charts/build-bootc-images/templates/job.yaml
+++ b/charts/build-bootc-images/templates/job.yaml
@@ -42,7 +42,7 @@ spec:
                   - name: dataVolumeSize
                     value: {{ .dataVolumeSize }}
                   - name: bootcImageBuilderConfigMap
-                    value: {{ .bootcImageBuilderConfig }}
+                    value: {{ .bootcImageBuilderConfigMap }}
                 pipelineRef:
                   name: build-bootc-image
                 taskRunTemplate:
