--- a/charts/acm-rhem/templates/clusterrole.yaml
+++ b/charts/acm-rhem/templates/clusterrole.yaml
@@ -6,4 +6,4 @@ metadata:
 rules:
   - apiGroups: ["config.openshift.io"]
     resources: ["consoles"]
-    verbs: ["patch"]
+    verbs: ["get", "patch"]
