--- a/charts/acm-rhem/templates/job.yaml
+++ b/charts/acm-rhem/templates/job.yaml
@@ -18,4 +18,4 @@ spec:
             - /bin/sh
             - -c
             - |
-              oc patch console cluster --type='merge' -p '{"spec":{"plugins":["flightctl-plugin"]}}'
+              oc patch consoles.operator.openshift.io cluster --type='merge' -p '{"spec":{"plugins":["flightctl-plugin"]}}'
