--- a/charts/acm-rhem/templates/clusterrole.yaml
+++ b/charts/acm-rhem/templates/clusterrole.yaml
@@ -7,3 +7,6 @@ rules:
   - apiGroups: ["consoles.operator.openshift.io"]
     resources: ["cluster"]
     verbs: ["get", "patch"]
+  - apiGroups: ["operator.openshift.io"]
+    resources: ["consoles"]
+    verbs: ["get", "patch"]
