--- a/charts/example-store-devices/templates/virtualmachine.yaml
+++ b/charts/example-store-devices/templates/virtualmachine.yaml
@@ -23,7 +23,7 @@ metadata:
     vm.kubevirt.io/template.version: v0.32.2
   name: {{ .name }}
 spec:
-  runStrategy: Halted
+  runStrategy: Running
   template:
     metadata:
       annotations:
