--- a/charts/create-flightctl-agent-config/templates/job.yaml
+++ b/charts/create-flightctl-agent-config/templates/job.yaml
@@ -76,7 +76,7 @@ spec:
       serviceAccountName: route-reader
       containers:
         - name: create-flightctl-agent-config
-          image: image-registry.openshift-image-registry.svc:5000/student-services/flightctl-cli:latest
+          image: image-registry.openshift-image-registry.svc.cluster.local:5000/student-services/flightctl-cli:latest
           command:
             - /bin/sh
             - -c
