--- a/charts/example-store-devices/templates/job.yaml
+++ b/charts/example-store-devices/templates/job.yaml
@@ -37,47 +37,34 @@ spec:
 {{- end }}
               )
 
-              TOTAL_DEVICES=${#ALIASES[@]}
-              APPROVED_COUNT=0
+              # Keep track of which aliases we've already approved
+              declare -A APPROVED_ALIASES
 
-              # Function to check the number of approved devices
-              count_approved_devices() {
-                flightctl get enrollmentrequests | awk 'NR>1 && $2 == "Approved"' | wc -l
-              }
-
-              # Main loop: runs until all devices are approved
-              while [ "$APPROVED_COUNT" -lt "$TOTAL_DEVICES" ]; do
+              # Loop until all aliases have been approved
+              while [ "${#APPROVED_ALIASES[@]}" -lt "$TOTAL_DEVICES" ]; do
                 echo "Checking for pending enrollment requests..."
 
-                # Fetch the list of pending devices
+                # Fetch all pending enrollment requests
                 mapfile -t PENDING_DEVICE_IDS < <(
                   flightctl get enrollmentrequests \
                   | awk 'NR>1 && $2 == "Pending" { print $1 }'
                 )
 
-                for i in "${!PENDING_DEVICE_IDS[@]}"; do
-                  DEVICE_ID="${PENDING_DEVICE_IDS[$i]}"
-                  ALIAS="${ALIASES[$i]}"
-
-                  # Skip if there’s no alias for that index
-                  if [ -z "$ALIAS" ]; then
-                    echo "No alias specified for index $i (device ID: $DEVICE_ID). Skipping..."
-                    continue
-                  fi
-
-                  echo "Approving device '$DEVICE_ID' with alias='$ALIAS'..."
-                  flightctl approve -l "alias=${ALIAS}" -l "pos=prod" "enrollmentrequest/${DEVICE_ID}"
-
-                  # Increment the approved count
-                  APPROVED_COUNT=$((APPROVED_COUNT + 1))
-                  echo "Approved devices count: $APPROVED_COUNT/$TOTAL_DEVICES"
+                # Approve each pending request with an unused alias
+                for DEVICE_ID in "${PENDING_DEVICE_IDS[@]}"; do
+                  for ALIAS in "${ALIASES[@]}"; do
+                    if [[ -z "${APPROVED_ALIASES[$ALIAS]+x}" ]]; then
+                      echo "Approving device '$DEVICE_ID' with alias='$ALIAS'..."
+                      flightctl approve -l "alias=${ALIAS}" -l "pos=prod" "enrollmentrequest/${DEVICE_ID}"
+                      APPROVED_ALIASES["$ALIAS"]=true
+                      break
+                    fi
+                  done
                 done
 
-                # Update the approved count
-                APPROVED_COUNT=$(count_approved_devices)
+                echo "Approved devices count: ${#APPROVED_ALIASES[@]}/$TOTAL_DEVICES"
 
-                # Sleep for a few seconds before checking again
-                if [ "$APPROVED_COUNT" -lt "$TOTAL_DEVICES" ]; then
+                if [ "${#APPROVED_ALIASES[@]}" -lt "$TOTAL_DEVICES" ]; then
                   echo "Waiting before checking again..."
                   sleep 10
                 fi
