--- a/builds/rhel9-bootc-edgemanager-pos-prod/ocp-internal-registry.conf
+++ b/builds/rhel9-bootc-edgemanager-pos-prod/ocp-internal-registry.conf
@@ -1,3 +1,3 @@
 [[registry]]
-location = "image-registry.openshift-image-registry.svc.cluster.local:5000"
+location = "image-registry.openshift-image-registry.svc:5000"
 insecure = true
