--- a/charts/create-flightctl-agent-config/templates/job.yaml
+++ b/charts/create-flightctl-agent-config/templates/job.yaml
@@ -110,7 +110,33 @@ spec:
                   spec:
                     os:
                       image: 'image-registry.openshift-image-registry.svc:5000/student-services/rhel9-bootc-edgemanager-pos-prod:1.0.0'
-                    config: []
+                    config:
+                      - name: acm-crd
+                        httpRef:
+                          filePath: /var/local/acm-import/crd.yaml
+                          repository: acm-registration
+                          suffix: /agent-registration/crds/v1
+                      - name: acm-registration
+                        httpRef:
+                          filePath: /var/local/acm-import/import.yaml
+                          repository: acm-registration
+                          suffix: /agent-registration/manifests/{{ "{{" }} .metadata.name {{ "}}" }}
+                      - name: apply-acm-manifests
+                        inline:
+                          - content: |
+                              - if:
+                                - path: /var/local/acm-import/crd.yaml
+                                  op: [created]
+                                run: kubectl apply -f /var/local/acm-import/crd.yaml
+                                envVars:
+                                  KUBECONFIG: /var/lib/microshift/resources/kubeadmin/kubeconfig
+                              - if:
+                                - path: /var/local/acm-import/import.yaml
+                                  op: [created]
+                                run: kubectl apply -f /var/local/acm-import/import.yaml
+                                envVars:
+                                  KUBECONFIG: /var/lib/microshift/resources/kubeadmin/kubeconfig
+                            path: /etc/flightctl/hooks.d/afterupdating/50-acm-registration.yaml
                     applications: []' > /tmp/fleet.yaml
               flightctl apply -f fleet.yaml
           volumeMounts:
