--- a/bootstrap-testing/student-services/templates/bootc-image-pipeline.yaml
+++ b/bootstrap-testing/student-services/templates/bootc-image-pipeline.yaml
@@ -24,3 +24,4 @@ spec:
 {{ toYaml .Values.gitSource | nindent 10 }}
         bootcImageBuilderConfig:
 {{ toYaml .Values.bootcImageBuilderConfig | nindent 10 }}
+        pullSecret: '{{ .Values.pullSecret }}'
