--- a/charts/bootc-image-pipeline/templates/secret.yaml
+++ b/charts/bootc-image-pipeline/templates/secret.yaml
@@ -4,5 +4,4 @@ kind: Secret
 metadata:
   name: pull-secret
 data:
-  pull-secret.txt: |
-    {{- .Values.pullSecret }}
+  pull-secret.txt: '{{ .Values.pullSecret }}'
