--- a/builds/rhel9-bootc-edgemanager-pos-prod/Containerfile
+++ b/builds/rhel9-bootc-edgemanager-pos-prod/Containerfile
@@ -1,15 +1,6 @@
-FROM registry.redhat.io/openshift4/microshift-bootc-rhel9:v4.18
+FROM registry.redhat.io/rhel9/rhel-bootc:9.5
 
-# Unset proxy env vars
-ENV NO_PROXY=
-ENV HTTP_PROXY=
-ENV HTTPS_PROXY=
-
-# Reset dnf
-RUN dnf -y clean all &&\
-    rm -rf /etc/yum.repos.d/unsigned.repo
-
-# Ensure flightctl agent is installed
+# Install flightctl agent
 RUN dnf -y copr enable @redhat-et/flightctl && \
     dnf -y install flightctl-agent && \
     dnf -y clean all && \
@@ -19,32 +10,23 @@ RUN dnf -y copr enable @redhat-et/flightctl && \
 # Add flightctl agent config
 ADD .flightctl-agent-config/config.yaml /etc/flightctl/
 
-# Ignore registry certs
-ADD ocp-internal-registry.conf /etc/containers/registries.conf.d/999-ocp-internal-registry.conf
-
-# Deploy "old" application via kustomization
-RUN mkdir -p /etc/microshift/manifests
-COPY kustomization.yaml /etc/microshift/manifests/kustomization.yaml
-COPY deployment.yaml /etc/microshift/manifests/deployment.yaml
-COPY service.yaml /etc/microshift/manifests/service.yaml
-COPY route.yaml /etc/microshift/manifests/route.yaml
-
-# Let the applications through the firewall
-RUN firewall-offline-cmd --zone=public --add-port=30000/tcp
-RUN firewall-offline-cmd --zone=public --add-port=8080/tcp
-
-# Need a pull secret
-COPY .pull-secret/pull-secret.txt /etc/crio/openshift-pull-secret
-
-# MTU magic
-COPY ovn.yaml /etc/microshift/ovn.yaml
-
 # Add registry auth
 ADD .registry-auth/auth.json /usr/lib/container-auth.json
 RUN chmod 0600 /usr/lib/container-auth.json && \
     ln -sr /usr/lib/container-auth.json /etc/ostree/auth.json
 
-# Disable auto-updating
+# Ignore registry certs
+ADD ocp-internal-registry.conf /etc/containers/registries.conf.d/999-ocp-internal-registry.conf
+
+# Allow apps through the firewall
+RUN firewall-offline-cmd --zone=public --add-port=30000/tcp
+RUN firewall-offline-cmd --zone=public --add-port=8080/tcp
+
+# Add quadlet files
+COPY point-of-sale.kube /etc/containers/systemd/point-of-sale.kube
+COPY point-of-sale.yaml /etc/containers/systemd/point-of-sale.yaml
+
+# Disable auto-updates
 RUN systemctl mask bootc-fetch-apply-updates.timer
 
 # Lint the build
