--- a/charts/build-bootc-images/templates/job.yaml
+++ b/charts/build-bootc-images/templates/job.yaml
@@ -17,7 +17,20 @@ spec:
             - /bin/sh
             - -c
             - |
-              echo "Creating PipelineRun..."
+              echo "Waiting for Pipeline 'build-bootc-image' to be available..."
+              TIMEOUT=300  # seconds
+              INTERVAL=5
+              ELAPSED=0
+              while ! oc get pipeline build-bootc-image > /dev/null 2>&1; do
+                if [ $ELAPSED -ge $TIMEOUT ]; then
+                  echo "Timeout waiting for Pipeline 'build-bootc-image' to be available"
+                  exit 1
+                fi
+                echo "Pipeline not found yet. Waiting..."
+                sleep $INTERVAL
+                ELAPSED=$((ELAPSED + INTERVAL))
+              done
+              echo "Pipeline found. Creating PipelineRun..."
               cat <<EOF | oc create -f -
               apiVersion: tekton.dev/v1
               kind: PipelineRun
