--- a/charts/build-bootc-images/templates/role.yaml
+++ b/charts/build-bootc-images/templates/role.yaml
@@ -7,3 +7,6 @@ rules:
   - apiGroups: ["tekton.dev"]
     resources: ["pipelineruns"]
     verbs: ["create", "get", "list", "watch"]
+  - apiGroups: ["tekton.dev"]
+    resources: ["pipelines"]
+    verbs: ["get", "list", "watch"]
