--- a/charts/populate-pull-secret/templates/role.yaml
+++ b/charts/populate-pull-secret/templates/role.yaml
@@ -6,7 +6,7 @@ metadata:
 rules:
 - apiGroups: [""]
   resources: ["secrets"]
-  verbs: ["create", "get", "update", "list", "apply"]
+  verbs: ["create", "get", "update", "list", "apply", "patch"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
