--- a/charts/student-services/templates/build-flightctl-cli.yaml
+++ b/charts/student-services/templates/build-flightctl-cli.yaml
@@ -2,10 +2,10 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: example-store-devices
+  name: build-flightctl-cli
   namespace: openshift-gitops
   labels:
-    application: example-store-devices
+    application: build-flightctl-cli
 spec:
   destination:
     name: ''
@@ -17,15 +17,7 @@ spec:
   source:
     repoURL: {{ .Values.gitRepo }}
     targetRevision: {{ .Values.gitBranch | default "main" }}
-    path: charts/example-store-devices/
+    path: charts/build-flightctl-cli/
     helm:
       valueFiles:
         - values.yaml
-      values: |
-        virtualMachines:
-{{- toYaml .Values.virtualMachines | nindent 10 }}
-        openshiftAuth:
-{{- with .Values.openshiftAuth }}
-          username: {{ .username }}
-          password: {{ .password }}
-{{- end }}
