--- a/charts/student-services/templates/student-virtual-machines.yaml
+++ b/charts/student-services/templates/student-virtual-machines.yaml
@@ -25,5 +25,5 @@ spec:
         students:
 {{- $userCount := int .Values.user.count }}
 {{- range $index := until $userCount }}
-          - user: {{ $.Values.user.prefix }}{{ add $index 1}}
+          - {{ $.Values.user.prefix }}{{ add $index 1}}
 {{- end }}
