--- a/bootstrap/templates/student-services-app.yaml
+++ b/bootstrap/templates/student-services-app.yaml
@@ -22,3 +22,8 @@ spec:
         openshiftAuth:
           username: admin
           password: {{ .Values.common_password }}
+        students:
+{{- $userCount := int .Values.user.count }}
+{{- range $index := until $userCount }}
+          - {{ $.Values.user.prefix }}{{ add $index 1}}
+{{- end }}     
