--- a/charts/student-services/templates/example-store-devices.yaml
+++ b/charts/student-services/templates/example-store-devices.yaml
@@ -15,7 +15,7 @@ spec:
   syncPolicy:
     automated: {}
   source:
-    repoURL: {{ .Values.gitRepo }}
+    repoURL: https://github.com/rhpds/lb2517-edge-fleet-gitops.git
     targetRevision: {{ .Values.gitBranch | default "main" }}
     path: charts/example-store-devices/
     helm:
