--- a/charts/student-services/templates/pipelines.yaml
+++ b/charts/student-services/templates/pipelines.yaml
@@ -14,7 +14,7 @@ spec:
   syncPolicy:
     automated: {}
   source:
-    repoURL: {{ .Values.gitRepo }}
+    repoURL: https://github.com/rhpds/lb2517-edge-fleet-gitops.git
     targetRevision: {{ .Values.gitBranch | default "main" }}
     path: charts/pipelines/
     helm:
