--- a/charts/student-services/templates/update-web-terminal.yaml
+++ b/charts/student-services/templates/update-web-terminal.yaml
@@ -10,7 +10,7 @@ spec:
   destination:
     name: ''
     server: https://kubernetes.default.svc
-    namespace: student-services
+    namespace: openshift-operators
   project: default
   syncPolicy:
     automated: {}
